OpenLGTV BCM: 0.5.0-SVN20140122: experimental support for Japan ATSC-BCM3549, mount essential filesystems at installer if not mounted
git-svn-id: http://svn.openlgtv.org.ru@1235 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -26,7 +26,7 @@ TODO (not everything to be done for 0.5.0):
     * FileManager: add command line or command window (?)
     * option in settings to choose links.html from remote server or local file
     * another Remote Control rewrite? - most likely as CGI to generate buttons on the fly + button for switching actions
-    * add support for 'SmartTV-addon' packages
+    * add support for 'SmartTV-addon' packages / waiting for app dumps from 2011 SmartTV models owners
     * insert characters in cursor position in WebUI, Internet Browser and FileManager dialogs, not always at the end of string
     * udpxy integration for udp:// and rtp:// links
     * update and test scripts chrooted on SmartTV models
@@ -54,6 +54,8 @@ TODO (not everything to be done for 0.5.0):
     * FIX: update thumbshot url for bookmarks by nicola_12345
     * FIX: Ipla alternative service after protocol change
     * FIX: minor fix for TVP alternative service after protocol change
+    * ADD: experimental support for Japanese models
+    * ADD: mount essential filesystems at installer if not mounted before
     * ADD: TVN alternative service
     * ADD: 'showmsg' shell function to show 2-line messages on TV screen
     * ADD: more NetCast services
