--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -54,6 +54,7 @@ TODO (not everything to be done for 0.5.0):
     * FIX: update thumbshot url for bookmarks by nicola_12345
     * FIX: Ipla alternative service after protocol change
     * FIX: minor fix for TVP alternative service after protocol change
+    * FIX: usernames / passwords with spaces or non-ascii characters should be supported now in mounting CIFS NetShares
     * ADD: experimental support for Japanese models
     * ADD: mount essential filesystems at installer if not mounted before
     * ADD: TVN alternative service
